styling and comments added for styling

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Html Table Cheatsheet</title>
 </head>
 <body>
+    <div class="wrapper">
     <header>
         <h1>Html Table Cheatsheet</h1>
         <nav>
@@ -68,6 +69,10 @@
                 </tr>
             </tbody>
         </table>
+    </div>
+    <footer>
+        <p>Created by Grant Hollington <br>Copyright &copy; 2022 <br>Codecademy Project</p>
+    </footer>
     </div>
 </body>
 </html>
